# Expotify

./: .gitignore  config.json  overlay.html  package-lock.json  package.json  vite.config.ts
.claude-plugin/: plugin.json
.github/workflows/: release.yml
scripts/claude-helper/: runner.mjs
sessions/260202-misty-bonsai/: session.jsonl
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  updater.rs
src-tauri/src/ai/: anthropic.rs  cache.rs  mod.rs  openai.rs
src-tauri/src/auth/: anthropic.rs  keychain.rs  mod.rs  openai.rs  spotify.rs
src-tauri/src/lyrics/: cache.rs  fetcher.rs  instrumental.rs  kugou.rs  lrc_parser.rs  lrclib.rs  mod.rs  netease.rs  petitlyrics.rs  qqmusic.rs  types.rs
src-tauri/src/spotify/: api.rs  applescript.rs  mod.rs  polling.rs  types.rs  webapi.rs
src-tauri/src/storage/: settings.rs
src-tauri/src/tts/: mod.rs
src/components/: AgentChat.tsx  DevicePicker.tsx  LyricsDisplay.tsx
src/hooks/: useAgentChat.ts  useAuth.ts  useIMEComposition.ts  useLikeTrack.ts  useLyrics.ts  useReadAloud.ts  useTrack.ts  useUpdateCheck.ts
src/lib/: tauri.ts
src/overlay/: OverlayApp.tsx  main.tsx  overlay.css
src/types/: index.ts
