[package]
name = "expotify"
version = "0.5.4"
description = "Spotify track info display with AI insights"
authors = ["wunan"]
edition = "2021"

[lib]
name = "expotify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }

# OAuth & Auth
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5"

# Open URLs in browser
open = "5"

# Edge TTS
msedge-tts = "0.3"
# Static-link OpenSSL (required by msedge-tts -> isahc -> curl)
openssl = { version = "0.10", features = ["vendored"] }

# TOTP for Spotify sp_dc token exchange
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# macOS WKWebView cookie extraction (for Spotify webview login)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSHTTPCookie", "NSArray", "NSString"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKWebsiteDataStore", "WKHTTPCookieStore", "block2"] }
